--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="wc">
-      <h1 class="nt f-headline mb0 mt5">Connecting ideas for a better world</h1>
+      <h1 class="nt f-headline mb0 mt5">Innovation Today</h1>
       <h3 class="nt f4 mt2">Helping Mission 2020 to increase the impact of climate action.</h3>
       <h4 class="ms tracked mb5"><span class="gray">CLIENT</span> SYSTEMIQ, MISSION 2020</h4>
     </div>
