trying to change colour

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="w-100 dt">
       <div class="dtc v-mid">
           <img src="assets/logoSmartPlay.png" class="w-50 w-10-ns mv3 ml3" alt="Smartplayds Limited">
-      </div>met
     </div>
 
     <div class="w-100">
@@ -31,7 +30,9 @@
     </div>
 
     <section class="wc-s">
-      <h4 class="ms tracked mt0 mb3 ttu">The Challenge</h4>
+      <h4 class="ms tracked mt0 mb3 ttu" dark-red>The Challenge</h4>
+
+
       <p class="mb5">To deliver a fully functional proof of concept to collect and visualize ideas within 5 days, just in time for the <a href="http://www.climatehub.nyc/" target="_blank" rel="noopener noreferrer">Climate Week (NYC)</a> event.</p>
 
       <hr class="thin mt0 mb5">
