second attempt to change colour

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="wc">
-      <h1 class="nt f-headline mb0 mt5">Innovation Today</h1>
+      <h1 class="nt f-headline mb0 mt5 dark-red">Innovation Today</h1>
       <h3 class="nt f4 mt2">Helping Mission 2020 to increase the impact of climate action.</h3>
       <h4 class="ms tracked mb5"><span class="gray">CLIENT</span> SYSTEMIQ, MISSION 2020</h4>
     </div>
@@ -30,7 +30,7 @@
     </div>
 
     <section class="wc-s">
-      <h4 class="ms tracked mt0 mb3 ttu" dark-red>The Challenge</h4>
+      <h4 class="ms tracked mt0 mb3 ttu">The Challenge</h4>
 
 
       <p class="mb5">To deliver a fully functional proof of concept to collect and visualize ideas within 5 days, just in time for the <a href="http://www.climatehub.nyc/" target="_blank" rel="noopener noreferrer">Climate Week (NYC)</a> event.</p>
