--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <h4 class="ms tracked mb5"><span class="gray">CLIENT</span> SYSTEMIQ, MISSION 2020</h4>
     </div>
 
+    <button class="bw0 br2 bg-dwyl-teal pa2 white fw1 tc ttu tracked">do what you love</button>
+
     <div class="wc">
 
       <hr class="w-100 thick mb5">
